magazine positioned and styled.

--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,43 @@
           <div class="header_container-inner">
             <div class="header_content">
               <div class="header_logo"><a href="./"><img src="/images/logo.svg" alt="o logotipo para cada passo importa"></a></div>
-              <div class="header_copy"><h1>Leia a revista digital e conheça mais sobre o Edu, o novo amiguinho da Turma da Mônica, e a Distrofia Muscular de Duchene (DMD)</h1></div>
+              <div class="header_text"><h1>Leia a revista digital e conheça mais sobre o Edu, o novo amiguinho da Turma da Mônica, e a Distrofia Muscular de Duchene (DMD)</h1></div>
             </div>
            </div>
         </div>
       </header>
       <main>
+        <section id="magazine" class="magazine">
+          <div class="magazine_container">
+            <div class="magazine_list">
+              <div class="magazine_note">
+                Download for fun games inside!
+              </div>
+              <article>
+                <div class="magazine_display">
+                  <img src="images/1.png">
+                  <button type="button">Read Volume 1</button>
+                  <a href="index.html" target="_blank" class="magazine_download">Download PDF</a>
+                </div>
+              </article>
+              <article>
+                <div class="magazine_display">
+                  <img src="images/2.png">
+                  <button type="button">Read Volume 2</button>
+                  <a href="index.html" target="_blank" class="magazine_download">Download PDF</a>
+                </div>
+              </article>
+              <article>
+                <div class="magazine_display">
+                  <img src="images/1.png">
+                  <button type="button">Read Volume 3</button>
+                  <a href="index.html" target="_blank" class="magazine_download">Download PDF</a>
+                </div>
+              </article>
+            </div>
+          </div>
+
+        </section>
       
       </main>
       
