footer, layout adjustments, refactored sass, organizing files/code

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,26 @@
         </section>
       </main>
       <footer class="footer">
-        
+        <div class="footer_container">
+          <div class="footer_logo"><img src="/images/sarepta-logo.svg"></div>
+          <div class="footer_area">
+            <div class="footer_area-left">
+              <div class="footer_warning">This site intended for Brazil audiences only.</div>
+              <div class="footer_legal">
+                <p>©2019 Sarepta Therapeutics, Inc. 215 First Street, Cambridge, MA 02142. All rights reserved.
+                <p>12/16 C-NP-US-0047</p>
+                <p>Sarepta, Sarepta Therapeutics, and the Sarepta logo are registered trademarks of Sarepta Therapeutics, Inc.</p>
+                <p>Turma de Monica is a trademark of Mauricio de Sousa Editora</p>
+              </div>
+            </div>
+            <div class="footer_area-right">
+              <p>Apoio Sarepta Therapeutics</p>
+              <p><a href="https://www.sareptafarmaceutica.com.br/pt">www.sareptafarmaceutica.com.br</a></p>
+              <div class="footer__terms"><a href="./">Terms of Use</a></div>
+            </div>
+          </div>
+        </div>
       </footer>
   </body>
 </html>
+
