--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
   <head>
-
     <title>Cada Passo Importa</title>
     <meta name="title" content="Cada Passo Importa">
     <meta name="description" content="Leia a revista digital e conheça mais sobre o Edu, o novo amiguinho da Turma da Mônica, e a Distrofia Muscular de Duchene (DMD)">
@@ -9,25 +8,19 @@
     <meta charset="utf-8">
 
     <link href="/css/main.css" rel="stylesheet">
-
   </head>
 
   <body>
     <div id="page">
       <header class="header">
         <div class="header_container">
-          <div class="header_container-inner">
-            <div class="header_content">
-              <div class="header_logo"><a href="./"><img src="/images/logo.svg" alt="o logotipo para cada passo importa"></a></div>
-              <div class="header_text"><h1>Leia a revista digital e conheça mais sobre o Edu, o novo amiguinho da Turma da Mônica, e a Distrofia Muscular de Duchene (DMD)</h1></div>
-            </div>
-           </div>
+          <div class="header_logo"><a href="./"><img src="/images/logo.svg" alt="o logotipo para cada passo importa"></a></div>
+          <div class="header_text"><h1>Leia a revista digital e conheça mais sobre o Edu, o novo amiguinho da Turma da Mônica, e a Distrofia Muscular de Duchene (DMD)</h1></div>
         </div>
       </header>
       <main>
         <section id="magazine" class="magazine">
           <div class="magazine_container">
-            <div class="magazine_list">
               <div class="magazine_note">
                 Download for fun games inside!
               </div>
@@ -52,7 +45,6 @@
                   <a href="index.html" target="_blank" class="magazine_download">Download PDF</a>
                 </div>
               </article>
-            </div>
           </div>
         </section>
         <section id="details" class="details">
@@ -85,7 +77,7 @@
             <div class="footer_area-right">
               <p>Apoio Sarepta Therapeutics</p>
               <p><a href="https://www.sareptafarmaceutica.com.br/pt">www.sareptafarmaceutica.com.br</a></p>
-              <div class="footer__terms"><a href="./">Terms of Use</a></div>
+              <div class="footer_terms"><a href="./">Terms of Use</a></div>
             </div>
           </div>
         </div>
