added educators element styling and html

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,12 @@
               <p>Each comic book contains a story, games, and activities which facilitates understanding and inspires us to look beyond our physical differences.</p> 
               <p>This comic book will be released in a series. <a href="index.html">Sign up</a> for updates to be notified of news releases.</p>
               <p><a href="www.youtube.com">Watch this Youtube video</a> to see a behind-the-scenes look at the making of this series.</p>
+              <div class="educators_container">
+                <div class="educators">Educators:</div>
+                <div class="educators_text">
+                <p>Teach your students about Duchenne Muscular Dystrophy and disability inclusion with our free <a href="index.html">Classroom Education Kit</a></p>
+                </div>
+              </div>
             </div>
           </div>
         </section>
